// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Location Details Screen Tests rendering Get Section Details api responses Renders Location Details activity indicator when waiting for an api response 1`] = `
<ActivityIndicator
  animating={true}
  color="#0071e9"
  hidesWhenStopped={true}
  size="large"
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
/>
`;

exports[`Test Location Details Screen Tests rendering Get Section Details api responses Renders Location Details error message 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
      "paddingHorizontal": 15,
      "paddingVertical": 15,
    }
  }
>
  <mockConstructor
    color="#e57373"
    name="alert"
    size={40}
  />
  <Text
    style={
      Object {
        "fontSize": 16,
        "textAlign": "center",
      }
    }
  >
    [missing "en.LOCATION.LOCATION_API_ERROR" translation]
  </Text>
  <ForwardRef
    onPress={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#e57373",
        "borderRadius": 4,
        "height": 40,
        "justifyContent": "center",
        "marginVertical": 10,
        "width": "95%",
      }
    }
  >
    <Text>
      [missing "en.GENERICS.RETRY" translation]
    </Text>
  </ForwardRef>
</View>
`;

exports[`Test Location Details Screen Tests rendering Get Section Details api responses Renders Section Not found when getSectionDetails responds with a 204 status code 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
      "paddingVertical": 28,
    }
  }
>
  <mockConstructor
    color="#5FA7F2"
    name="information"
    size={40}
  />
  <Text>
    [missing "en.LOCATION.SECTION_NOT_FOUND" translation]
  </Text>
</View>
`;

exports[`Test Location Details Screen Tests rendering location details screen data Renders Location Details Screen with Empty Mock Data 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <ForwardRef
    ListEmptyComponent={
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
            "paddingVertical": 28,
          }
        }
      >
        <mockConstructor
          color="#5FA7F2"
          name="information"
          size={40}
        />
        <Text>
          [missing "en.LOCATION.FLOOR_EMPTY" translation]
        </Text>
      </View>
    }
    data={Array []}
    keyExtractor={[Function]}
    renderItem={[Function]}
  />
  <CustomModalComponent
    animationType="none"
    isVisible={false}
    modalType="Error"
    onClose={[Function]}
  >
    <React.Fragment>
      <Text
        style={
          Object {
            "fontSize": 18,
            "padding": 15,
            "textAlign": "center",
          }
        }
      >
        [missing "en.LOCATION.DELETE_ITEM" translation]
      </Text>
      <View
        style={
          Object {
            "alignContent": "space-around",
            "flexDirection": "row",
            "width": "100%",
          }
        }
      >
        <Button
          backgroundColor="#D6512D"
          disabled={false}
          height={45}
          onPress={[Function]}
          radius={5}
          style={
            Object {
              "flex": 1,
              "paddingHorizontal": 10,
            }
          }
          title="[missing \\"en.GENERICS.CANCEL\\" translation]"
          titleColor="#ffffffff"
          titleFontSize={16}
          titleFontWeight="normal"
          type={1}
          width={-1}
        />
        <Button
          backgroundColor="#0071e9"
          disabled={false}
          height={45}
          onPress={[Function]}
          radius={5}
          style={
            Object {
              "flex": 1,
              "paddingHorizontal": 10,
            }
          }
          title="[missing \\"en.GENERICS.OK\\" translation]"
          titleColor="#ffffffff"
          titleFontSize={16}
          titleFontWeight="normal"
          type={1}
          width={-1}
        />
      </View>
    </React.Fragment>
  </CustomModalComponent>
</View>
`;

exports[`Test Location Details Screen Tests rendering location details screen data Renders Location Details Screen with Mock Floor Items 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <ForwardRef
    ListEmptyComponent={
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
            "paddingVertical": 28,
          }
        }
      >
        <mockConstructor
          color="#5FA7F2"
          name="information"
          size={40}
        />
        <Text>
          [missing "en.LOCATION.FLOOR_EMPTY" translation]
        </Text>
      </View>
    }
    data={
      Array [
        Object {
          "itemDesc": "Nature Valley Sweet and Salty Granola Bars",
          "itemNbr": 980078597,
          "locationType": 8,
          "price": 2.4,
          "upcNbr": "123456789098",
        },
        Object {
          "itemDesc": "Nature Valley Honey Bars",
          "itemNbr": 980011111,
          "locationType": 8,
          "price": 5.8,
          "upcNbr": "123456789099",
        },
      ]
    }
    keyExtractor={[Function]}
    renderItem={[Function]}
  />
  <CustomModalComponent
    animationType="none"
    isVisible={false}
    modalType="Error"
    onClose={[Function]}
  >
    <React.Fragment>
      <Text
        style={
          Object {
            "fontSize": 18,
            "padding": 15,
            "textAlign": "center",
          }
        }
      >
        [missing "en.LOCATION.DELETE_ITEM" translation]
      </Text>
      <View
        style={
          Object {
            "alignContent": "space-around",
            "flexDirection": "row",
            "width": "100%",
          }
        }
      >
        <Button
          backgroundColor="#D6512D"
          disabled={false}
          height={45}
          onPress={[Function]}
          radius={5}
          style={
            Object {
              "flex": 1,
              "paddingHorizontal": 10,
            }
          }
          title="[missing \\"en.GENERICS.CANCEL\\" translation]"
          titleColor="#ffffffff"
          titleFontSize={16}
          titleFontWeight="normal"
          type={1}
          width={-1}
        />
        <Button
          backgroundColor="#0071e9"
          disabled={false}
          height={45}
          onPress={[Function]}
          radius={5}
          style={
            Object {
              "flex": 1,
              "paddingHorizontal": 10,
            }
          }
          title="[missing \\"en.GENERICS.OK\\" translation]"
          titleColor="#ffffffff"
          titleFontSize={16}
          titleFontWeight="normal"
          type={1}
          width={-1}
        />
      </View>
    </React.Fragment>
  </CustomModalComponent>
</View>
`;

exports[`Test Location Details Screen Tests rendering location details screen data Renders Location Details Screen with Mock Large Location Data 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <ForwardRef
    ListEmptyComponent={
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
            "paddingVertical": 28,
          }
        }
      >
        <mockConstructor
          color="#5FA7F2"
          name="information"
          size={40}
        />
        <Text>
          [missing "en.LOCATION.FLOOR_EMPTY" translation]
        </Text>
      </View>
    }
    data={
      Array [
        Object {
          "itemDesc": "Nature Valley Sweet and Salty Granola Bars",
          "itemNbr": 980078597,
          "locationType": 8,
          "price": 2.4,
          "upcNbr": "123456789098",
        },
        Object {
          "itemDesc": "Nature Valley Sweet and Salty Granola Bars",
          "itemNbr": 980078597,
          "locationType": 8,
          "price": 2.4,
          "upcNbr": "123456789098",
        },
        Object {
          "itemDesc": "Nature Valley Sweet and Salty Granola Bars",
          "itemNbr": 980078597,
          "locationType": 8,
          "price": 2.4,
          "upcNbr": "123456789098",
        },
        Object {
          "itemDesc": "Nature Valley Sweet and Salty Granola Bars",
          "itemNbr": 980078597,
          "locationType": 8,
          "price": 2.4,
          "upcNbr": "123456789098",
        },
        Object {
          "itemDesc": "Nature Valley Sweet and Salty Granola Bars",
          "itemNbr": 980078597,
          "locationType": 8,
          "price": 2.4,
          "upcNbr": "123456789098",
        },
        Object {
          "itemDesc": "Nature Valley Sweet and Salty Granola Bars",
          "itemNbr": 980078597,
          "locationType": 8,
          "price": 2.4,
          "upcNbr": "123456789098",
        },
        Object {
          "itemDesc": "Nature Valley Sweet and Salty Granola Bars",
          "itemNbr": 980078597,
          "locationType": 8,
          "price": 2.4,
          "upcNbr": "123456789098",
        },
        Object {
          "itemDesc": "Nature Valley Sweet and Salty Granola Bars",
          "itemNbr": 980078597,
          "locationType": 8,
          "price": 2.4,
          "upcNbr": "123456789098",
        },
        Object {
          "itemDesc": "Nature Valley Sweet and Salty Granola Bars",
          "itemNbr": 980078597,
          "locationType": 8,
          "price": 2.4,
          "upcNbr": "123456789098",
        },
        Object {
          "itemDesc": "Nature Valley Sweet and Salty Granola Bars",
          "itemNbr": 980078597,
          "locationType": 8,
          "price": 2.4,
          "upcNbr": "123456789098",
        },
        Object {
          "itemDesc": "Nature Valley Sweet and Salty Granola Bars",
          "itemNbr": 980078597,
          "locationType": 8,
          "price": 2.4,
          "upcNbr": "123456789098",
        },
        Object {
          "itemDesc": "Nature Valley Sweet and Salty Granola Bars",
          "itemNbr": 980078597,
          "locationType": 8,
          "price": 2.4,
          "upcNbr": "123456789098",
        },
        Object {
          "itemDesc": "Nature Valley Sweet and Salty Granola Bars",
          "itemNbr": 980078597,
          "locationType": 8,
          "price": 2.4,
          "upcNbr": "123456789098",
        },
        Object {
          "itemDesc": "Nature Valley Sweet and Salty Granola Bars",
          "itemNbr": 980078597,
          "locationType": 8,
          "price": 2.4,
          "upcNbr": "123456789098",
        },
        Object {
          "itemDesc": "Nature Valley Sweet and Salty Granola Bars",
          "itemNbr": 980078597,
          "locationType": 8,
          "price": 2.4,
          "upcNbr": "123456789098",
        },
        Object {
          "itemDesc": "Nature Valley Sweet and Salty Granola Bars",
          "itemNbr": 980078597,
          "locationType": 8,
          "price": 2.4,
          "upcNbr": "123456789098",
        },
        Object {
          "itemDesc": "Nature Valley Sweet and Salty Granola Bars",
          "itemNbr": 980078597,
          "locationType": 8,
          "price": 2.4,
          "upcNbr": "123456789098",
        },
        Object {
          "itemDesc": "Nature Valley Sweet and Salty Granola Bars",
          "itemNbr": 980078597,
          "locationType": 8,
          "price": 2.4,
          "upcNbr": "123456789098",
        },
        Object {
          "itemDesc": "Nature Valley Sweet and Salty Granola Bars",
          "itemNbr": 980078597,
          "locationType": 8,
          "price": 2.4,
          "upcNbr": "123456789098",
        },
        Object {
          "itemDesc": "Nature Valley Sweet and Salty Granola Bars",
          "itemNbr": 980078597,
          "locationType": 8,
          "price": 2.4,
          "upcNbr": "123456789098",
        },
        Object {
          "itemDesc": "Nature Valley Sweet and Salty Granola Bars",
          "itemNbr": 980078597,
          "locationType": 8,
          "price": 2.4,
          "upcNbr": "123456789098",
        },
        Object {
          "itemDesc": "Nature Valley Sweet and Salty Granola Bars",
          "itemNbr": 980078597,
          "locationType": 8,
          "price": 2.4,
          "upcNbr": "123456789098",
        },
        Object {
          "itemDesc": "Nature Valley Sweet and Salty Granola Bars",
          "itemNbr": 980078597,
          "locationType": 8,
          "price": 2.4,
          "upcNbr": "123456789098",
        },
        Object {
          "itemDesc": "Nature Valley Sweet and Salty Granola Bars",
          "itemNbr": 980078597,
          "locationType": 8,
          "price": 2.4,
          "upcNbr": "123456789098",
        },
        Object {
          "itemDesc": "Nature Valley Sweet and Salty Granola Bars",
          "itemNbr": 980078597,
          "locationType": 8,
          "price": 2.4,
          "upcNbr": "123456789098",
        },
        Object {
          "itemDesc": "Nature Valley Sweet and Salty Granola Bars",
          "itemNbr": 980078597,
          "locationType": 8,
          "price": 2.4,
          "upcNbr": "123456789098",
        },
        Object {
          "itemDesc": "Nature Valley Sweet and Salty Granola Bars",
          "itemNbr": 980078597,
          "locationType": 8,
          "price": 2.4,
          "upcNbr": "123456789098",
        },
        Object {
          "itemDesc": "Nature Valley Sweet and Salty Granola Bars",
          "itemNbr": 980078597,
          "locationType": 8,
          "price": 2.4,
          "upcNbr": "123456789098",
        },
        Object {
          "itemDesc": "Nature Valley Sweet and Salty Granola Bars",
          "itemNbr": 980078597,
          "locationType": 8,
          "price": 2.4,
          "upcNbr": "123456789098",
        },
        Object {
          "itemDesc": "Nature Valley Sweet and Salty Granola Bars",
          "itemNbr": 980078597,
          "locationType": 8,
          "price": 2.4,
          "upcNbr": "123456789098",
        },
        Object {
          "itemDesc": "Nature Valley Sweet and Salty Granola Bars",
          "itemNbr": 980078597,
          "locationType": 8,
          "price": 2.4,
          "upcNbr": "123456789098",
        },
        Object {
          "itemDesc": "Nature Valley Sweet and Salty Granola Bars",
          "itemNbr": 980078597,
          "locationType": 8,
          "price": 2.4,
          "upcNbr": "123456789098",
        },
        Object {
          "itemDesc": "Nature Valley Sweet and Salty Granola Bars",
          "itemNbr": 980078597,
          "locationType": 8,
          "price": 2.4,
          "upcNbr": "123456789098",
        },
        Object {
          "itemDesc": "Nature Valley Sweet and Salty Granola Bars",
          "itemNbr": 980078597,
          "locationType": 8,
          "price": 2.4,
          "upcNbr": "123456789098",
        },
        Object {
          "itemDesc": "Nature Valley Sweet and Salty Granola Bars",
          "itemNbr": 980078597,
          "locationType": 8,
          "price": 2.4,
          "upcNbr": "123456789098",
        },
        Object {
          "itemDesc": "Nature Valley Sweet and Salty Granola Bars",
          "itemNbr": 980078597,
          "locationType": 8,
          "price": 2.4,
          "upcNbr": "123456789098",
        },
        Object {
          "itemDesc": "Nature Valley Sweet and Salty Granola Bars",
          "itemNbr": 980078597,
          "locationType": 8,
          "price": 2.4,
          "upcNbr": "123456789098",
        },
        Object {
          "itemDesc": "Nature Valley Sweet and Salty Granola Bars",
          "itemNbr": 980078597,
          "locationType": 8,
          "price": 2.4,
          "upcNbr": "123456789098",
        },
        Object {
          "itemDesc": "Nature Valley Sweet and Salty Granola Bars",
          "itemNbr": 980078597,
          "locationType": 8,
          "price": 2.4,
          "upcNbr": "123456789098",
        },
        Object {
          "itemDesc": "Nature Valley Sweet and Salty Granola Bars",
          "itemNbr": 980078597,
          "locationType": 8,
          "price": 2.4,
          "upcNbr": "123456789098",
        },
        Object {
          "itemDesc": "Nature Valley Sweet and Salty Granola Bars",
          "itemNbr": 980078597,
          "locationType": 8,
          "price": 2.4,
          "upcNbr": "123456789098",
        },
        Object {
          "itemDesc": "Nature Valley Sweet and Salty Granola Bars",
          "itemNbr": 980078597,
          "locationType": 8,
          "price": 2.4,
          "upcNbr": "123456789098",
        },
        Object {
          "itemDesc": "Nature Valley Sweet and Salty Granola Bars",
          "itemNbr": 980078597,
          "locationType": 8,
          "price": 2.4,
          "upcNbr": "123456789098",
        },
        Object {
          "itemDesc": "Nature Valley Sweet and Salty Granola Bars",
          "itemNbr": 980078597,
          "locationType": 8,
          "price": 2.4,
          "upcNbr": "123456789098",
        },
        Object {
          "itemDesc": "Nature Valley Sweet and Salty Granola Bars",
          "itemNbr": 980078597,
          "locationType": 8,
          "price": 2.4,
          "upcNbr": "123456789098",
        },
        Object {
          "itemDesc": "Nature Valley Sweet and Salty Granola Bars",
          "itemNbr": 980078597,
          "locationType": 8,
          "price": 2.4,
          "upcNbr": "123456789098",
        },
        Object {
          "itemDesc": "Nature Valley Sweet and Salty Granola Bars",
          "itemNbr": 980078597,
          "locationType": 8,
          "price": 2.4,
          "upcNbr": "123456789098",
        },
        Object {
          "itemDesc": "Nature Valley Sweet and Salty Granola Bars",
          "itemNbr": 980078597,
          "locationType": 8,
          "price": 2.4,
          "upcNbr": "123456789098",
        },
        Object {
          "itemDesc": "Nature Valley Sweet and Salty Granola Bars",
          "itemNbr": 980078597,
          "locationType": 8,
          "price": 2.4,
          "upcNbr": "123456789098",
        },
        Object {
          "itemDesc": "Nature Valley Sweet and Salty Granola Bars",
          "itemNbr": 980078597,
          "locationType": 8,
          "price": 2.4,
          "upcNbr": "123456789098",
        },
        Object {
          "itemDesc": "Nature Valley Sweet and Salty Granola Bars",
          "itemNbr": 980078597,
          "locationType": 8,
          "price": 2.4,
          "upcNbr": "123456789098",
        },
        Object {
          "itemDesc": "Nature Valley Sweet and Salty Granola Bars",
          "itemNbr": 980078597,
          "locationType": 8,
          "price": 2.4,
          "upcNbr": "123456789098",
        },
        Object {
          "itemDesc": "Nature Valley Sweet and Salty Granola Bars",
          "itemNbr": 980078597,
          "locationType": 8,
          "price": 2.4,
          "upcNbr": "123456789098",
        },
        Object {
          "itemDesc": "Nature Valley Sweet and Salty Granola Bars",
          "itemNbr": 980078597,
          "locationType": 8,
          "price": 2.4,
          "upcNbr": "123456789098",
        },
        Object {
          "itemDesc": "Nature Valley Sweet and Salty Granola Bars",
          "itemNbr": 980078597,
          "locationType": 8,
          "price": 2.4,
          "upcNbr": "123456789098",
        },
        Object {
          "itemDesc": "Nature Valley Sweet and Salty Granola Bars",
          "itemNbr": 980078597,
          "locationType": 8,
          "price": 2.4,
          "upcNbr": "123456789098",
        },
        Object {
          "itemDesc": "Nature Valley Sweet and Salty Granola Bars",
          "itemNbr": 980078597,
          "locationType": 8,
          "price": 2.4,
          "upcNbr": "123456789098",
        },
        Object {
          "itemDesc": "Nature Valley Sweet and Salty Granola Bars",
          "itemNbr": 980078597,
          "locationType": 8,
          "price": 2.4,
          "upcNbr": "123456789098",
        },
        Object {
          "itemDesc": "Nature Valley Sweet and Salty Granola Bars",
          "itemNbr": 980078597,
          "locationType": 8,
          "price": 2.4,
          "upcNbr": "123456789098",
        },
        Object {
          "itemDesc": "Nature Valley Sweet and Salty Granola Bars",
          "itemNbr": 980078597,
          "locationType": 8,
          "price": 2.4,
          "upcNbr": "123456789098",
        },
        Object {
          "itemDesc": "Nature Valley Sweet and Salty Granola Bars",
          "itemNbr": 980078597,
          "locationType": 8,
          "price": 2.4,
          "upcNbr": "123456789098",
        },
        Object {
          "itemDesc": "Nature Valley Sweet and Salty Granola Bars",
          "itemNbr": 980078597,
          "locationType": 8,
          "price": 2.4,
          "upcNbr": "123456789098",
        },
        Object {
          "itemDesc": "Nature Valley Sweet and Salty Granola Bars",
          "itemNbr": 980078597,
          "locationType": 8,
          "price": 2.4,
          "upcNbr": "123456789098",
        },
        Object {
          "itemDesc": "Nature Valley Sweet and Salty Granola Bars",
          "itemNbr": 980078597,
          "locationType": 8,
          "price": 2.4,
          "upcNbr": "123456789098",
        },
        Object {
          "itemDesc": "Nature Valley Sweet and Salty Granola Bars",
          "itemNbr": 980078597,
          "locationType": 8,
          "price": 2.4,
          "upcNbr": "123456789098",
        },
        Object {
          "itemDesc": "Nature Valley Sweet and Salty Granola Bars",
          "itemNbr": 980078597,
          "locationType": 8,
          "price": 2.4,
          "upcNbr": "123456789098",
        },
        Object {
          "itemDesc": "Nature Valley Sweet and Salty Granola Bars",
          "itemNbr": 980078597,
          "locationType": 8,
          "price": 2.4,
          "upcNbr": "123456789098",
        },
        Object {
          "itemDesc": "Nature Valley Sweet and Salty Granola Bars",
          "itemNbr": 980078597,
          "locationType": 8,
          "price": 2.4,
          "upcNbr": "123456789098",
        },
        Object {
          "itemDesc": "Nature Valley Sweet and Salty Granola Bars",
          "itemNbr": 980078597,
          "locationType": 8,
          "price": 2.4,
          "upcNbr": "123456789098",
        },
        Object {
          "itemDesc": "Nature Valley Sweet and Salty Granola Bars",
          "itemNbr": 980078597,
          "locationType": 8,
          "price": 2.4,
          "upcNbr": "123456789098",
        },
        Object {
          "itemDesc": "Nature Valley Sweet and Salty Granola Bars",
          "itemNbr": 980078597,
          "locationType": 8,
          "price": 2.4,
          "upcNbr": "123456789098",
        },
        Object {
          "itemDesc": "Nature Valley Sweet and Salty Granola Bars",
          "itemNbr": 980078597,
          "locationType": 8,
          "price": 2.4,
          "upcNbr": "123456789098",
        },
        Object {
          "itemDesc": "Nature Valley Sweet and Salty Granola Bars",
          "itemNbr": 980078597,
          "locationType": 8,
          "price": 2.4,
          "upcNbr": "123456789098",
        },
        Object {
          "itemDesc": "Nature Valley Sweet and Salty Granola Bars",
          "itemNbr": 980078597,
          "locationType": 8,
          "price": 2.4,
          "upcNbr": "123456789098",
        },
        Object {
          "itemDesc": "Nature Valley Sweet and Salty Granola Bars",
          "itemNbr": 980078597,
          "locationType": 8,
          "price": 2.4,
          "upcNbr": "123456789098",
        },
        Object {
          "itemDesc": "Nature Valley Sweet and Salty Granola Bars",
          "itemNbr": 980078597,
          "locationType": 8,
          "price": 2.4,
          "upcNbr": "123456789098",
        },
        Object {
          "itemDesc": "Nature Valley Sweet and Salty Granola Bars",
          "itemNbr": 980078597,
          "locationType": 8,
          "price": 2.4,
          "upcNbr": "123456789098",
        },
        Object {
          "itemDesc": "Nature Valley Sweet and Salty Granola Bars",
          "itemNbr": 980078597,
          "locationType": 8,
          "price": 2.4,
          "upcNbr": "123456789098",
        },
        Object {
          "itemDesc": "Nature Valley Sweet and Salty Granola Bars",
          "itemNbr": 980078597,
          "locationType": 8,
          "price": 2.4,
          "upcNbr": "123456789098",
        },
        Object {
          "itemDesc": "Nature Valley Sweet and Salty Granola Bars",
          "itemNbr": 980078597,
          "locationType": 8,
          "price": 2.4,
          "upcNbr": "123456789098",
        },
        Object {
          "itemDesc": "Nature Valley Sweet and Salty Granola Bars",
          "itemNbr": 980078597,
          "locationType": 8,
          "price": 2.4,
          "upcNbr": "123456789098",
        },
        Object {
          "itemDesc": "Nature Valley Sweet and Salty Granola Bars",
          "itemNbr": 980078597,
          "locationType": 8,
          "price": 2.4,
          "upcNbr": "123456789098",
        },
        Object {
          "itemDesc": "Nature Valley Sweet and Salty Granola Bars",
          "itemNbr": 980078597,
          "locationType": 8,
          "price": 2.4,
          "upcNbr": "123456789098",
        },
        Object {
          "itemDesc": "Nature Valley Sweet and Salty Granola Bars",
          "itemNbr": 980078597,
          "locationType": 8,
          "price": 2.4,
          "upcNbr": "123456789098",
        },
        Object {
          "itemDesc": "Nature Valley Sweet and Salty Granola Bars",
          "itemNbr": 980078597,
          "locationType": 8,
          "price": 2.4,
          "upcNbr": "123456789098",
        },
        Object {
          "itemDesc": "Nature Valley Sweet and Salty Granola Bars",
          "itemNbr": 980078597,
          "locationType": 8,
          "price": 2.4,
          "upcNbr": "123456789098",
        },
        Object {
          "itemDesc": "Nature Valley Sweet and Salty Granola Bars",
          "itemNbr": 980078597,
          "locationType": 8,
          "price": 2.4,
          "upcNbr": "123456789098",
        },
        Object {
          "itemDesc": "Nature Valley Sweet and Salty Granola Bars",
          "itemNbr": 980078597,
          "locationType": 8,
          "price": 2.4,
          "upcNbr": "123456789098",
        },
        Object {
          "itemDesc": "Nature Valley Sweet and Salty Granola Bars",
          "itemNbr": 980078597,
          "locationType": 8,
          "price": 2.4,
          "upcNbr": "123456789098",
        },
        Object {
          "itemDesc": "Nature Valley Sweet and Salty Granola Bars",
          "itemNbr": 980078597,
          "locationType": 8,
          "price": 2.4,
          "upcNbr": "123456789098",
        },
        Object {
          "itemDesc": "Nature Valley Sweet and Salty Granola Bars",
          "itemNbr": 980078597,
          "locationType": 8,
          "price": 2.4,
          "upcNbr": "123456789098",
        },
        Object {
          "itemDesc": "Nature Valley Sweet and Salty Granola Bars",
          "itemNbr": 980078597,
          "locationType": 8,
          "price": 2.4,
          "upcNbr": "123456789098",
        },
        Object {
          "itemDesc": "Nature Valley Sweet and Salty Granola Bars",
          "itemNbr": 980078597,
          "locationType": 8,
          "price": 2.4,
          "upcNbr": "123456789098",
        },
        Object {
          "itemDesc": "Nature Valley Sweet and Salty Granola Bars",
          "itemNbr": 980078597,
          "locationType": 8,
          "price": 2.4,
          "upcNbr": "123456789098",
        },
        Object {
          "itemDesc": "Nature Valley Sweet and Salty Granola Bars",
          "itemNbr": 980078597,
          "locationType": 8,
          "price": 2.4,
          "upcNbr": "123456789098",
        },
        Object {
          "itemDesc": "Nature Valley Sweet and Salty Granola Bars",
          "itemNbr": 980078597,
          "locationType": 8,
          "price": 2.4,
          "upcNbr": "123456789098",
        },
        Object {
          "itemDesc": "Nature Valley Sweet and Salty Granola Bars",
          "itemNbr": 980078597,
          "locationType": 8,
          "price": 2.4,
          "upcNbr": "123456789098",
        },
        Object {
          "itemDesc": "Nature Valley Sweet and Salty Granola Bars",
          "itemNbr": 980078597,
          "locationType": 8,
          "price": 2.4,
          "upcNbr": "123456789098",
        },
        Object {
          "itemDesc": "Nature Valley Sweet and Salty Granola Bars",
          "itemNbr": 980078597,
          "locationType": 8,
          "price": 2.4,
          "upcNbr": "123456789098",
        },
        Object {
          "itemDesc": "Nature Valley Sweet and Salty Granola Bars",
          "itemNbr": 980078597,
          "locationType": 8,
          "price": 2.4,
          "upcNbr": "123456789098",
        },
      ]
    }
    keyExtractor={[Function]}
    renderItem={[Function]}
  />
  <CustomModalComponent
    animationType="none"
    isVisible={false}
    modalType="Error"
    onClose={[Function]}
  >
    <React.Fragment>
      <Text
        style={
          Object {
            "fontSize": 18,
            "padding": 15,
            "textAlign": "center",
          }
        }
      >
        [missing "en.LOCATION.DELETE_ITEM" translation]
      </Text>
      <View
        style={
          Object {
            "alignContent": "space-around",
            "flexDirection": "row",
            "width": "100%",
          }
        }
      >
        <Button
          backgroundColor="#D6512D"
          disabled={false}
          height={45}
          onPress={[Function]}
          radius={5}
          style={
            Object {
              "flex": 1,
              "paddingHorizontal": 10,
            }
          }
          title="[missing \\"en.GENERICS.CANCEL\\" translation]"
          titleColor="#ffffffff"
          titleFontSize={16}
          titleFontWeight="normal"
          type={1}
          width={-1}
        />
        <Button
          backgroundColor="#0071e9"
          disabled={false}
          height={45}
          onPress={[Function]}
          radius={5}
          style={
            Object {
              "flex": 1,
              "paddingHorizontal": 10,
            }
          }
          title="[missing \\"en.GENERICS.OK\\" translation]"
          titleColor="#ffffffff"
          titleFontSize={16}
          titleFontWeight="normal"
          type={1}
          width={-1}
        />
      </View>
    </React.Fragment>
  </CustomModalComponent>
</View>
`;

exports[`Test Location Details Screen test delete api test delete api is complete 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <ForwardRef
    ListEmptyComponent={
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
            "paddingVertical": 28,
          }
        }
      >
        <mockConstructor
          color="#5FA7F2"
          name="information"
          size={40}
        />
        <Text>
          [missing "en.LOCATION.FLOOR_EMPTY" translation]
        </Text>
      </View>
    }
    data={
      Array [
        Object {
          "itemDesc": "Nature Valley Sweet and Salty Granola Bars",
          "itemNbr": 980078597,
          "locationType": 8,
          "price": 2.4,
          "upcNbr": "123456789098",
        },
        Object {
          "itemDesc": "Nature Valley Honey Bars",
          "itemNbr": 980011111,
          "locationType": 8,
          "price": 5.8,
          "upcNbr": "123456789099",
        },
      ]
    }
    keyExtractor={[Function]}
    renderItem={[Function]}
  />
  <CustomModalComponent
    animationType="none"
    isVisible={false}
    modalType="Error"
    onClose={[Function]}
  >
    <React.Fragment>
      <Text
        style={
          Object {
            "fontSize": 18,
            "padding": 15,
            "textAlign": "center",
          }
        }
      >
        [missing "en.LOCATION.DELETE_ITEM" translation]
      </Text>
      <View
        style={
          Object {
            "alignContent": "space-around",
            "flexDirection": "row",
            "width": "100%",
          }
        }
      >
        <Button
          backgroundColor="#D6512D"
          disabled={false}
          height={45}
          onPress={[Function]}
          radius={5}
          style={
            Object {
              "flex": 1,
              "paddingHorizontal": 10,
            }
          }
          title="[missing \\"en.GENERICS.CANCEL\\" translation]"
          titleColor="#ffffffff"
          titleFontSize={16}
          titleFontWeight="normal"
          type={1}
          width={-1}
        />
        <Button
          backgroundColor="#0071e9"
          disabled={false}
          height={45}
          onPress={[Function]}
          radius={5}
          style={
            Object {
              "flex": 1,
              "paddingHorizontal": 10,
            }
          }
          title="[missing \\"en.GENERICS.OK\\" translation]"
          titleColor="#ffffffff"
          titleFontSize={16}
          titleFontWeight="normal"
          type={1}
          width={-1}
        />
      </View>
    </React.Fragment>
  </CustomModalComponent>
</View>
`;

exports[`Test Location Details Screen test delete api test delete api is waiting 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <ForwardRef
    ListEmptyComponent={
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
            "paddingVertical": 28,
          }
        }
      >
        <mockConstructor
          color="#5FA7F2"
          name="information"
          size={40}
        />
        <Text>
          [missing "en.LOCATION.FLOOR_EMPTY" translation]
        </Text>
      </View>
    }
    data={
      Array [
        Object {
          "itemDesc": "Nature Valley Sweet and Salty Granola Bars",
          "itemNbr": 980078597,
          "locationType": 8,
          "price": 2.4,
          "upcNbr": "123456789098",
        },
        Object {
          "itemDesc": "Nature Valley Honey Bars",
          "itemNbr": 980011111,
          "locationType": 8,
          "price": 5.8,
          "upcNbr": "123456789099",
        },
      ]
    }
    keyExtractor={[Function]}
    renderItem={[Function]}
  />
  <CustomModalComponent
    animationType="none"
    isVisible={true}
    modalType="Error"
    onClose={[Function]}
  >
    <ActivityIndicator
      animating={true}
      color="#0071e9"
      hidesWhenStopped={true}
      size="large"
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        }
      }
    />
  </CustomModalComponent>
</View>
`;

exports[`Test Location Details Screen test delete api test delete api with error 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <ForwardRef
    ListEmptyComponent={
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
            "paddingVertical": 28,
          }
        }
      >
        <mockConstructor
          color="#5FA7F2"
          name="information"
          size={40}
        />
        <Text>
          [missing "en.LOCATION.FLOOR_EMPTY" translation]
        </Text>
      </View>
    }
    data={
      Array [
        Object {
          "itemDesc": "Nature Valley Sweet and Salty Granola Bars",
          "itemNbr": 980078597,
          "locationType": 8,
          "price": 2.4,
          "upcNbr": "123456789098",
        },
        Object {
          "itemDesc": "Nature Valley Honey Bars",
          "itemNbr": 980011111,
          "locationType": 8,
          "price": 5.8,
          "upcNbr": "123456789099",
        },
      ]
    }
    keyExtractor={[Function]}
    renderItem={[Function]}
  />
  <CustomModalComponent
    animationType="none"
    isVisible={true}
    modalType="Error"
    onClose={[Function]}
  >
    <React.Fragment>
      <Text
        style={
          Object {
            "fontSize": 18,
            "padding": 15,
            "textAlign": "center",
          }
        }
      >
        [missing "en.LOCATION.DELETE_ITEM" translation]
      </Text>
      <View
        style={
          Object {
            "alignContent": "space-around",
            "flexDirection": "row",
            "width": "100%",
          }
        }
      >
        <Button
          backgroundColor="#D6512D"
          disabled={false}
          height={45}
          onPress={[Function]}
          radius={5}
          style={
            Object {
              "flex": 1,
              "paddingHorizontal": 10,
            }
          }
          title="[missing \\"en.GENERICS.CANCEL\\" translation]"
          titleColor="#ffffffff"
          titleFontSize={16}
          titleFontWeight="normal"
          type={1}
          width={-1}
        />
        <Button
          backgroundColor="#0071e9"
          disabled={false}
          height={45}
          onPress={[Function]}
          radius={5}
          style={
            Object {
              "flex": 1,
              "paddingHorizontal": 10,
            }
          }
          title="[missing \\"en.GENERICS.RETRY\\" translation]"
          titleColor="#ffffffff"
          titleFontSize={16}
          titleFontWeight="normal"
          type={1}
          width={-1}
        />
      </View>
    </React.Fragment>
  </CustomModalComponent>
</View>
`;
